--- a/Pub Crawler/Info.plist
+++ b/Pub Crawler/Info.plist
@@ -22,7 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Use for distance</string>
 	<key>NSAppTransportSecurity</key>
+	
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
